Bug 1354082 - part 2: make overflow panel show up in customize mode and make dragging work correctly, r=mikedeboer
This reuses the logic we have for toolbar dragging and uses it for the photon panel (ie overflow panel)
to do vertical space-making animations.

It explicitly doesn't address the styling or permanently showing the overflow button (for which we have other bugs on file).


MozReview-Commit-ID: 4qrWC0H30xi

UltraBlame original commit: 119ce372e28e51d938596458ea7669c827a064d5

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -2036,6 +2036,23 @@ fixed
 scroll
 ;
 }
+#
+widget
+-
+overflow
+-
+fixed
+-
+list
+>
+toolbarpaletteitem
+[
+place
+=
+"
+panel
+"
+]
 toolbarpaletteitem
 [
 place
@@ -2167,6 +2184,26 @@ inherit
 important
 ;
 }
+#
+widget
+-
+overflow
+-
+fixed
+-
+list
+>
+toolbarpaletteitem
+[
+notransition
+]
+[
+place
+=
+"
+panel
+"
+]
 toolbarpaletteitem
 [
 notransition
@@ -2407,6 +2444,41 @@ margin
 left
 :
 0
+;
+}
+#
+widget
+-
+overflow
+-
+fixed
+-
+list
+>
+toolbarpaletteitem
+[
+place
+=
+"
+panel
+"
+]
+{
+border
+-
+top
+:
+0px
+solid
+transparent
+;
+border
+-
+bottom
+:
+0px
+solid
+transparent
 ;
 }
 #
